# Infralinker

./: .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  config.py  export.sh  install.sh  main.py  pyproject.toml  requirements.txt  run.py  uninstall.sh  update.sh  web_install.sh
app/: __init__.py  models.py
app/admin/: forms.py  views.py
app/auth/: forms.py  views.py
app/home/: views.py
app/static/css/: rack_style.css  style.css  style_help.css
app/static/downloads/: applications_template.csv  devices_template.csv  networks_template.csv  racks_template.csv  servers_templates.csv
app/static/js/: chart.js  jquery.bdt.js  script.js  summernote-config.js
app/templates/: base.html  base_auth.html
app/templates/admin/: dashboard.html  detailed_dashboard.html
app/templates/admin/applications/: application.html  applications.html
app/templates/admin/changelog/: change_logs.html
app/templates/admin/connectivities/: connectivities.html  connectivity.html
app/templates/admin/contracts/: contract.html  contract_details.html  contracts.html
app/templates/admin/datacenters/: datacenter.html  datacenters.html
app/templates/admin/departments/: department.html  departments.html
app/templates/admin/import/: csv_applications.html  csv_networks.html  csv_platforms.html  csv_racks.html  csv_servers.html
app/templates/admin/networks/: network.html  networks.html
app/templates/admin/projects/: project.html  project_document.html  project_report.html  projects.html
app/templates/admin/racks/: rack.html  rack_overview.html  racks.html
app/templates/admin/servers/: server.html  server_details.html  servers.html
app/templates/admin/settings/: settings.html
app/templates/admin/users/: admins.html  change_password.html  register_new_admin.html
app/templates/auth/: login.html
app/templates/auth/tags/: tag.html  (+1 more)
app/templates/documentations/: index.html
app/templates/email/: email-contract.html  email-project.html  email-ticket.html  email-vulnerability.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/home/: index.html
instance/: config.py
nginx-conf/: infralinkerd.service  nginx-infralinker.conf  production.ini  wsgi.py
(+17 files in other folders)
