[project]
name = "infralinker"
version = "1.1.1"
description = "InfraLinker is a modern opensource datacenter infrastructure assets management solution designed to make managing and tracking your data center assets easier and more efficient. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.2",
    "ansi2html==1.9.2",
    "async-timeout==5.0.1",
    "blinker==1.9.0",
    "bootstrap-flask==2.5.0",
    "brotli==1.1.0",
    "build==1.2.2.post1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contextvars==2.4",
    "dash==3.1.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "dataclasses==0.6",
    "dnspython==2.7.0",
    "dominate==2.9.1",
    "email-validator==2.2.0",
    "flask==3.1.1",
    "flask-compress==1.17",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.1.0",
    "flask-script==2.0.6",
    "flask-sqlalchemy==3.1.1",
    "flask-widgets==0.5",
    "flask-wtf==1.2.2",
    "greenlet==3.2.3",
    "idna==3.10",
    "immutables==0.21",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "is-disposable-email==1.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "narwhals==1.45.0",
    "nest-asyncio==1.6.0",
    "nose2==0.15.1",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.0",
    "pep517==0.13.1",
    "pip-review==1.3.0",
    "pip-tools==7.4.1",
    "plotly==6.2.0",
    "pymysql==1.1.1",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.4",
    "retrying==1.4.0",
    "schedule==1.2.2",
    "six==1.17.0",
    "sqlalchemy==2.0.41",
    "tenacity==9.1.2",
    "tomli==2.2.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uwsgi==2.0.30",
    "visitor==0.1.3",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
    "wtforms-sqlalchemy==0.4.2",
    "wtforms-validators==1.0.0",
    "zipp==3.23.0",
    "zstandard==0.23.0",
]
